package edu.kit.iti.formal.stvs.view;

import javafx.scene.Node;

/**
 * Created by csicar on 10.01.17.
 */
public interface Controller {
    public Node getView();
}
